--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
 	<body>
 		<video autoplay loop muted>
 			<source src="movie/background.mp4" type="video/mp4" >
-			<source src="movie/background.ogg" type="video/ogg">
+			<source src="movie/background.OGG" type="video/OGG">
 		</video>
 		<header>
-				COMPANY NAME
+			
 		</header>
 			<nav>
 				<h3>
@@ -91,7 +91,7 @@
 			</form>
 		</section>
 	<footer>
-		&copy; 2018 - Michael Munatsi - Inholland 
+		&copy; 2019-TARIRAI ZIWEYA
 	</footer>
 </body>
 </html>
