--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 	</head>
 	<body>
 		<video autoplay loop muted>
-			<source src="movie/background.mp4" type="video/mp4" >
-			<source src="movie/background.ogg" type="video/ogg">
+			
+			<source src="movie/background.OGG" type="video/OGG">
 		</video>
 		<header>
-			COMPANY NAME
+			
 		</header>
 			<nav>
 				<h3>
 					<ul>
 						<li>
 							<a href = "product.html">
-								PRODUCT
+								GALLERY
 							</a>
 							<a href = "http://www.blogger.com">
 								BLOG
@@ -47,39 +47,16 @@
 			<section>
 				<article>
 					<p class="heading" id="firstheading">
-						WE ARE ENTERTAINMENT
+						AFRICAN BEAUTY
 					</p>
 					<p  class="flex-container2"> 
-					   <img src="img/product3.png" title= "mario and luiggy" alt=" cartoon of mario and luiggy" >
+					   <img src="img/photo.jpg" title= "RUTH ZIWEYA" alt=" cartoon of mario and luiggy" >
 					</p>
 				</article>
-				<article>
-					<p class="heading">
-						MOBILE GAMES
-					</p>
-					<p class="flex-container2">
-						<img src="img/product8.png" title= "candy crush" alt="candy crush game on a mobile phone"> 
-					</p>
-				</article>
-				<article>
-					<p class="heading">
-						BORD GAMES
-					</p>
-					<P class="flex-container2"> 
-						<img src="img/product6.png" title= "pawns"  alt=" four pawns">
-					</p>
-				</article>
-				<article>
-					<p class="heading">
-						CONSOLE GAMES
-					</p>
-					<p class="flex-container2"> 
-						<img  src="img/product9.png" title= "game controler" alt="blue wireless controler"> 
-					</p>
-				</article>
+				
 			</section>
 			<footer class="index-footer">
-				&copy; 2018-Michael Munatsi-Inholland
+				&copy; 2019-TARIRAI ZIWEYA
 			</footer>
 		</main>
 	</body>
