--- a/product.html
+++ b/product.html
@@ -20,10 +20,10 @@
 	<body>
 		<video autoplay loop muted>
 			<source src="movie/background.mp4" type="video/mp4" >
-			<source src="movie/background.ogg" type="video/ogg">
+			<source src="movie/background.OGG" type="video/OGG">
 		</video>
 		<header>
-				COMPANY NAME
+				
 		</header>
 			<nav>
 				<h3>
@@ -43,74 +43,25 @@
 				</h3>
 			</nav>
 			<aside>
-				PRODUCT CATALOG
+				MY PICTURES
 			</aside>
 		<main>
 			<section class="flex-container1">
 				<article>
 					<p>
-						<img src="img/product1.png" title= "image of a game1" alt="product1"/>
+						<img src="img/photo1.jpg" title= "RUTH" alt="puzzle game"/>
 					</p>
 				</article>
 				<article>
 					<P>
-						<img  src="img/product2.png" title= "image of a game2" alt="product2"/>
+						<img  src="img/photo2.jpg" title= "RUTH" alt=" image of castle game"/>
 					</P>
 				</article>
-				<article>
-					<P>
-						<img src="img/product3.png" title= "image of a game3" alt="product3"/> 
-					</p>
-				</article>
-				<article>
-					<P>
-						<img  src="img/product4.png" title= "image of a game4" alt="product4"/> 
-					</P>
-				</article>
-				<article>
-					<P>
-						<img  src="img/product5.png" title= "image of a game5" alt="product5"/> 
-					</P>
-				</article>
-				<article>
-					<p>
-						<img  src="img/product6.png" title= "image of a game6" alt="product6"/>
-					</P>
-				</article>
-				<article>
-					<P>
-						<img src="img/product7.png" title= "image of a game7" alt="product7"/> 
-					</P>
-				</article>
-				<article>
-					<P>
-					<img src="img/product8.png" title= "image of a game8" alt="product8"/> 
-					</p>
-				</article>
-				<article>
-					<P>
-						<img src="img/product9.png" title= "image of a game9" alt="product9"/> 
-					</P>
-				</article>
-				<article>
-					<P>
-						<img src="img/product10.png" title= "image of a game10" alt="product10"/> 
-					</P>
-				</article>
-				<article>
-					<P>
-						<img src="img/product11.png" title= "image of a game11" alt="product11"/> 
-					</P>
-				</article>
-				<article>
-					<P>
-						<img src="img/product12.png" title= "image of a game12" alt="product12"/> 	
-					</P>
-				</article>
+				
 			</section>
 		</main>
 		<footer>
-			&copy; 2018-Michael Munatsi-Inholland
+			&copy; 2019 TARIRAI ZIWEYA
 		</footer>
 	</body>
 </html>
