--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<source src="movie/background.OGG" type="video/OGG">
 		</video>
 		<header>
-			
+			AFRICAN BEAUTY
 		</header>
 			<nav>
 				<h3>
@@ -47,7 +47,7 @@
 			<section>
 				<article>
 					<p class="heading" id="firstheading">
-						AFRICAN BEAUTY
+						GORGEOUS ME
 					</p>
 					<p  class="flex-container2"> 
 					   <img src="img/photo.jpg" title= "RUTH ZIWEYA" alt=" cartoon of mario and luiggy" >
