--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
 			<source src="movie/background.OGG" type="video/OGG">
 		</video>
 		<header>
-				
+			AFRICAN BEAUTY
 		</header>
 			<nav>
 				<h3>
