--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="keywords" content="product catalog, entertainment, mobile games, board games, console games">
+		<meta name="keywords" content="TARIRAI ZIWEYA, AFRICAN BEAUTY, AFRICAN BEAUTY, GORGEOUS ME, MY PICTURES">
 		<meta name = "destription" content = "assigment compnay product catalog page "/>
 		<meta name = "author" content = "Michael Munatsi" />
 		<link rel="shortcut icon" href="img/inhollandlogo.ico" size = "16x16" type="image/x-icon">
