--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="keywords" content=" TARIRAI ZIWEYA, AFRICAN BEAUTY, AFRICAN BEAUTY, GORGEOUS ME, MY PICTURES">
+		<meta name="keywords" content="product catalog, entertainment, mobile games, board games, console games">
 		<meta name = "destription" content = " compnay home page "/>
 		<meta name = "author" content = "Michael Munatsi" />
 		<link rel="shortcut icon" href="img/inhollandlogo.ico" size = "16x16" type="image/x-icon">
@@ -23,7 +23,7 @@
 			<source src="movie/background.OGG" type="video/OGG">
 		</video>
 		<header>
-			AFRICAN BEAUTY
+			HAPPY BIRTHDAY
 		</header>
 			<nav>
 				<h3>
@@ -47,16 +47,16 @@
 			<section>
 				<article>
 					<p class="heading" id="firstheading">
-						GORGEOUS ME
+						I WISH YOU MANY MORE
 					</p>
 					<p  class="flex-container2"> 
-					   <img src="img/photo.jpg" title= "RUTH ZIWEYA" alt=" cartoon of mario and luiggy" >
+					   <img src="img/photo.jpg" title= "PRIVY" alt=" cartoon of mario and luiggy" >
 					</p>
 				</article>
 				
 			</section>
 			<footer class="index-footer">
-				&copy; 2019-TARIRAI ZIWEYA
+				&copy; 2019-PREVIOUS
 			</footer>
 		</main>
 	</body>
