--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="keywords" content="TARIRAI ZIWEYA, AFRICAN BEAUTY, AFRICAN BEAUTY, GORGEOUS ME, MY PICTURES">
+		<meta name="keywords" content="product catalog, entertainment, mobile games, board games, console games">
 		<meta name = "destription" content = "assigment compnay product catalog page "/>
 		<meta name = "author" content = "Michael Munatsi" />
 		<link rel="shortcut icon" href="img/inhollandlogo.ico" size = "16x16" type="image/x-icon">
@@ -23,7 +23,7 @@
 			<source src="movie/background.OGG" type="video/OGG">
 		</video>
 		<header>
-			AFRICAN BEAUTY
+				
 		</header>
 			<nav>
 				<h3>
@@ -43,25 +43,25 @@
 				</h3>
 			</nav>
 			<aside>
-				MY PICTURES
+				BIRTHDAY GIRL
 			</aside>
 		<main>
 			<section class="flex-container1">
 				<article>
 					<p>
-						<img src="img/photo1.jpg" title= "RUTH" alt="puzzle game"/>
+						<img src="img/photo1.jpg" title= "PRIVY" alt="puzzle game"/>
 					</p>
 				</article>
 				<article>
 					<P>
-						<img  src="img/photo2.jpg" title= "RUTH" alt=" image of castle game"/>
+						<img  src="img/photo2.jpg" title= "PRIVY" alt=" image of castle game"/>
 					</P>
 				</article>
 				
 			</section>
 		</main>
 		<footer>
-			&copy; 2019 TARIRAI ZIWEYA
+			&copy; 2019 PREVIOUS
 		</footer>
 	</body>
 </html>
