--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="keywords" content="TARIRAI ZIWEYA, AFRICAN BEAUTY, AFRICAN BEAUTY, GORGEOUS ME, MY PICTURES">
+		<meta name="keywords" content="product catalog, entertainment, mobile games, board games, console games">
 		<meta name = "destription" content = " company contact form "/>
 		<meta name = "author" content = "Michael Munatsi" />
 		<link rel="shortcut icon" href="img/inhollandlogo.ico" size = "16x16" type="image/x-icon">
@@ -23,7 +23,7 @@
 			<source src="movie/background.OGG" type="video/OGG">
 		</video>
 		<header>
-			AFRICAN BEAUTY
+			
 		</header>
 			<nav>
 				<h3>
@@ -91,7 +91,7 @@
 			</form>
 		</section>
 	<footer>
-		&copy; 2019-TARIRAI ZIWEYA
+		&copy; 2019-PREVIOUS
 	</footer>
 </body>
 </html>
